Updates by Mizz:
added mod chatting
added lag checking for in game players and spectators trying to join
added *kick, *ban, *ipban, *block, *grant, *stealth
added all ban protocols so every ban is saved to db
added auto-silencer for spamming
added (league related only) chats not being displayed to players in a league match unless its the refs - includes all chats
added a ban updater instead of it creating a new ban based on the same type
added a ban query and added that with *whois so it shows previous bans too
added league chatting while a match is in progress to be sent to spectator
added *helpcall and added helpcall logging in the db

fixed relative id's
fixed spectator warp in process is faster and doesn't land you on objects - thank z for the abuse
fixed privately owned arenas - now you have ownership of the arena - thank you sm for the help
fixed object tracker bug where the object list was being modified while looping through
fixed another object tracker copyto array problem - SM inspired
fixed makevehicle bug where the total was trying to count null
fixed spec all so it actually specs everyone
fixed if a privately owned arena is the only available arena, typing ?arena would dc you - fixed
fixed the majority of the chats, private chats are not 100% yet
fixed transfer alias and remove alias again - uses db protocol now
fixed a major issue where being granted/arena owner, you can pm someone in another arena and use commands on them
currently semi added vehicle pickup packet #16 - still a work in progress

Updates by kon:
changed KOTH script, added a ticker to show proper time, made a temporary change to scriptarena to check if KOTH script is running to avoid resetting flags. 


Updates by Mehr:
Added all current soccer changes

--- a/InfServer.DBComm/InfServer.DBComm.csproj
+++ b/InfServer.DBComm/InfServer.DBComm.csproj
@@ -80,6 +80,7 @@
     <Compile Include="Helpers\PacketIDs.cs" />
     <Compile Include="Packets\Commands\Chat\CS_Query.cs" />
     <Compile Include="Packets\Commands\Chat\CS_Squads.cs" />
+    <Compile Include="Packets\Commands\Mod\CS_Alias.cs" />
     <Compile Include="Packets\Commands\Mod\CS_Ban.cs" />
     <Compile Include="Packets\Login\CS_Auth.cs" />
     <Compile Include="Packets\Login\CS_PlayerLogin.cs" />
@@ -87,6 +88,7 @@
     <Compile Include="Packets\Login\SC_PlayerLogin.cs" />
     <Compile Include="Packets\Social\Chats\SC_LeaveChat.cs" />
     <Compile Include="Packets\Social\Chats\CS_LeaveChat.cs" />
+    <Compile Include="Packets\Social\CS_ChatCommand.cs" />
     <Compile Include="Packets\Social\SC_ModCommand.cs" />
     <Compile Include="Packets\Social\Chats\SC_PrivateChat.cs" />
     <Compile Include="Packets\Social\Chats\CS_JoinChat.cs" />
