--- a/InfServer/InfServer.csproj
+++ b/InfServer/InfServer.csproj
@@ -115,55 +115,55 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Bot\Bot.cs" />
-    <Compile Include="Bot\InfantryVehicle.cs" />
-    <Compile Include="Bot\Math\AxisAlignedBox.cs" />
-    <Compile Include="Bot\Math\Collections\BaseCollection.cs" />
-    <Compile Include="Bot\Math\Collections\Lists.cs" />
-    <Compile Include="Bot\Math\Collections\Pair.cs" />
-    <Compile Include="Bot\Math\Collections\QuaternionCollection.cs" />
-    <Compile Include="Bot\Math\Collections\Vector3Collection.cs" />
-    <Compile Include="Bot\Math\Degree.cs" />
-    <Compile Include="Bot\Math\Enums.cs" />
-    <Compile Include="Bot\Math\Matrix3.cs" />
-    <Compile Include="Bot\Math\Matrix4.cs" />
-    <Compile Include="Bot\Math\Plane.cs" />
-    <Compile Include="Bot\Math\PlaneBoundedVolume.cs" />
-    <Compile Include="Bot\Math\Quaternion.cs" />
-    <Compile Include="Bot\Math\Radian.cs" />
-    <Compile Include="Bot\Math\Ray.cs" />
-    <Compile Include="Bot\Math\Real.cs" />
-    <Compile Include="Bot\Math\Sphere.cs" />
-    <Compile Include="Bot\Math\Utility.cs" />
-    <Compile Include="Bot\Math\Utility\Contract.cs" />
-    <Compile Include="Bot\Math\Utility\Exceptions.cs" />
-    <Compile Include="Bot\Math\Utility\Proclaim.cs" />
-    <Compile Include="Bot\Math\Vector3.cs" />
-    <Compile Include="Bot\Math\Vector4.cs" />
-    <Compile Include="Bot\MovementController.cs" />
-    <Compile Include="Bot\Pathfinding\Pathfinder.cs" />
-    <Compile Include="Bot\ScriptBot.cs" />
-    <Compile Include="Bot\SharpSteer\AbstractVehicle.cs" />
-    <Compile Include="Bot\SharpSteer\BruteForceProximityDatabase.cs" />
-    <Compile Include="Bot\SharpSteer\Clock.cs" />
-    <Compile Include="Bot\SharpSteer\ILocalSpace.cs" />
-    <Compile Include="Bot\SharpSteer\IProximityDatabase.cs" />
-    <Compile Include="Bot\SharpSteer\ITokenForProximityDatabase.cs" />
-    <Compile Include="Bot\SharpSteer\IVehicle.cs" />
-    <Compile Include="Bot\SharpSteer\LocalSpace.cs" />
-    <Compile Include="Bot\SharpSteer\LQDatabase.cs" />
-    <Compile Include="Bot\SharpSteer\LQProximityDatabase.cs" />
-    <Compile Include="Bot\SharpSteer\Obstacle.cs" />
-    <Compile Include="Bot\SharpSteer\Pathway.cs" />
-    <Compile Include="Bot\SharpSteer\PolylinePathway.cs" />
-    <Compile Include="Bot\SharpSteer\SimpleVehicle.cs" />
-    <Compile Include="Bot\SharpSteer\SphericalObstacle.cs" />
-    <Compile Include="Bot\SharpSteer\SteerLibrary.cs" />
-    <Compile Include="Bot\SharpSteer\Utilities.cs" />
-    <Compile Include="Bot\SharpSteer\Vector3Helpers.cs" />
-    <Compile Include="Bot\SteeringController.cs" />
-    <Compile Include="Bot\Math\Vector2.cs" />
-    <Compile Include="Bot\WeaponController.cs" />
+    <Compile Include="Game\Arena\Bot\Bot.cs" />
+    <Compile Include="Game\Arena\Bot\InfantryVehicle.cs" />
+    <Compile Include="Game\Arena\Bot\Math\AxisAlignedBox.cs" />
+    <Compile Include="Game\Arena\Bot\Math\Collections\BaseCollection.cs" />
+    <Compile Include="Game\Arena\Bot\Math\Collections\Lists.cs" />
+    <Compile Include="Game\Arena\Bot\Math\Collections\Pair.cs" />
+    <Compile Include="Game\Arena\Bot\Math\Collections\QuaternionCollection.cs" />
+    <Compile Include="Game\Arena\Bot\Math\Collections\Vector3Collection.cs" />
+    <Compile Include="Game\Arena\Bot\Math\Degree.cs" />
+    <Compile Include="Game\Arena\Bot\Math\Enums.cs" />
+    <Compile Include="Game\Arena\Bot\Math\Matrix3.cs" />
+    <Compile Include="Game\Arena\Bot\Math\Matrix4.cs" />
+    <Compile Include="Game\Arena\Bot\Math\Plane.cs" />
+    <Compile Include="Game\Arena\Bot\Math\PlaneBoundedVolume.cs" />
+    <Compile Include="Game\Arena\Bot\Math\Quaternion.cs" />
+    <Compile Include="Game\Arena\Bot\Math\Radian.cs" />
+    <Compile Include="Game\Arena\Bot\Math\Ray.cs" />
+    <Compile Include="Game\Arena\Bot\Math\Real.cs" />
+    <Compile Include="Game\Arena\Bot\Math\Sphere.cs" />
+    <Compile Include="Game\Arena\Bot\Math\Utility.cs" />
+    <Compile Include="Game\Arena\Bot\Math\Utility\Contract.cs" />
+    <Compile Include="Game\Arena\Bot\Math\Utility\Exceptions.cs" />
+    <Compile Include="Game\Arena\Bot\Math\Utility\Proclaim.cs" />
+    <Compile Include="Game\Arena\Bot\Math\Vector3.cs" />
+    <Compile Include="Game\Arena\Bot\Math\Vector4.cs" />
+    <Compile Include="Game\Arena\Bot\MovementController.cs" />
+    <Compile Include="Game\Arena\Bot\Pathfinding\Pathfinder.cs" />
+    <Compile Include="Game\Arena\Bot\ScriptBot.cs" />
+    <Compile Include="Game\Arena\Bot\SharpSteer\AbstractVehicle.cs" />
+    <Compile Include="Game\Arena\Bot\SharpSteer\BruteForceProximityDatabase.cs" />
+    <Compile Include="Game\Arena\Bot\SharpSteer\Clock.cs" />
+    <Compile Include="Game\Arena\Bot\SharpSteer\ILocalSpace.cs" />
+    <Compile Include="Game\Arena\Bot\SharpSteer\IProximityDatabase.cs" />
+    <Compile Include="Game\Arena\Bot\SharpSteer\ITokenForProximityDatabase.cs" />
+    <Compile Include="Game\Arena\Bot\SharpSteer\IVehicle.cs" />
+    <Compile Include="Game\Arena\Bot\SharpSteer\LocalSpace.cs" />
+    <Compile Include="Game\Arena\Bot\SharpSteer\LQDatabase.cs" />
+    <Compile Include="Game\Arena\Bot\SharpSteer\LQProximityDatabase.cs" />
+    <Compile Include="Game\Arena\Bot\SharpSteer\Obstacle.cs" />
+    <Compile Include="Game\Arena\Bot\SharpSteer\Pathway.cs" />
+    <Compile Include="Game\Arena\Bot\SharpSteer\PolylinePathway.cs" />
+    <Compile Include="Game\Arena\Bot\SharpSteer\SimpleVehicle.cs" />
+    <Compile Include="Game\Arena\Bot\SharpSteer\SphericalObstacle.cs" />
+    <Compile Include="Game\Arena\Bot\SharpSteer\SteerLibrary.cs" />
+    <Compile Include="Game\Arena\Bot\SharpSteer\Utilities.cs" />
+    <Compile Include="Game\Arena\Bot\SharpSteer\Vector3Helpers.cs" />
+    <Compile Include="Game\Arena\Bot\SteeringController.cs" />
+    <Compile Include="Game\Arena\Bot\Math\Vector2.cs" />
+    <Compile Include="Game\Arena\Bot\WeaponController.cs" />
     <Compile Include="Database\Database.cs" />
     <Compile Include="Database\Logic\Social\Chats.cs" />
     <Compile Include="Database\Logic\Commands\Chat.cs" />
@@ -250,6 +250,7 @@
     <Compile Include="Protocol\Packets\Game\Action\CS_Shop.cs" />
     <Compile Include="Protocol\Packets\Game\Action\CS_ShopSkill.cs" />
     <Compile Include="Protocol\Packets\Game\Action\CS_ItemExpired.cs" />
+    <Compile Include="Protocol\Packets\Game\Action\CS_VehiclePickup.cs" />
     <Compile Include="Protocol\Packets\Game\Action\SC_ItemReload.cs" />
     <Compile Include="Protocol\Packets\Game\Action\SC_ItemUsed.cs" />
     <Compile Include="Protocol\Packets\Game\Action\SC_ShopFinished.cs" />
