--- a/InfServer/InfServer.csproj
+++ b/InfServer/InfServer.csproj
@@ -266,7 +266,7 @@
     <Compile Include="Protocol\Packets\Game\State\SC_LIOUpdates.cs" />
     <Compile Include="Protocol\Packets\Game\State\SC_Items.cs" />
     <Compile Include="Protocol\Packets\Game\State\SC_PlayerEnter.cs" />
-    <Compile Include="Protocol\Packets\Game\SC_EnterArena.cs" />
+    <Compile Include="Protocol\Packets\Login\SC_EnterArena.cs" />
     <Compile Include="Protocol\Packets\Game\State\SC_PlayerLeave.cs" />
     <Compile Include="Protocol\Packets\Game\State\SC_PlayerState.cs" />
     <Compile Include="Protocol\Packets\Game\State\SC_ArenaMessage.cs" />
@@ -299,6 +299,9 @@
     <Compile Include="Protocol\Packets\Security\CS_SecurityCheck.cs" />
     <Compile Include="Protocol\Packets\Security\SC_SecurityCheck.cs" />
     <Compile Include="Protocol\Packets\Security\SC_RegQuery.cs" />
+    <Compile Include="Protocol\Packets\Social\CS_SendBanner.cs" />
+    <Compile Include="Protocol\Packets\Social\SC_BannerTransfer.cs" />
+    <Compile Include="Protocol\Packets\Social\SC_SendBanner.cs" />
     <Compile Include="Protocol\Packets\State\SC_ZoneList.cs" />
     <Compile Include="Protocol\Packets\Stats\CS_ChartRequest.cs" />
     <Compile Include="Protocol\Packets\Stats\SC_Chart.cs" />
