Cfg addition - allow spectating Updated soccer ball script - fixed queue system, mercy rule and overtime(still working on dead ball timer) Updated inactivity timers to be more accurate Added mod command scripting (See soccer brawl script for an example) Added in game playable classes check Updated repairing vehicle math for old and new files Updated damage event handler Fixed *getball Other very minor fixes/changes
-Mizz

--- a/bin/scripts/Scripts.csproj
+++ b/bin/scripts/Scripts.csproj
@@ -185,6 +185,8 @@
     <Compile Include="GameTypes\Blank\Blank.cs" />
     <Compile Include="GameTypes\BugHunt\BugHunt.cs" />
     <Compile Include="GameTypes\AxiCTF\CTF.cs" />
+    <Compile Include="GameTypes\Conquest\CTF.cs" />
+    <Compile Include="GameTypes\Conquest\Warps.cs" />
     <Compile Include="GameTypes\CTFHQ\Bots\BasicDefense.cs" />
     <Compile Include="GameTypes\CTFHQ\Bots\Captain.cs" />
     <Compile Include="GameTypes\CTFHQ\Bots\Engineer.cs" />
