--- a/InfServer.DBComm/InfServer.DBComm.csproj
+++ b/InfServer.DBComm/InfServer.DBComm.csproj
@@ -96,10 +96,12 @@
     <Compile Include="C2SFactory.cs" />
     <Compile Include="Helpers\Database.cs" />
     <Compile Include="Helpers\PacketIDs.cs" />
+    <Compile Include="Packets\Commands\Chat\CS_ChartQuery.cs" />
     <Compile Include="Packets\Commands\Chat\CS_Query.cs" />
     <Compile Include="Packets\Commands\Chat\CS_Squads.cs" />
     <Compile Include="Packets\Commands\Mod\CS_Alias.cs" />
     <Compile Include="Packets\Commands\Mod\CS_Ban.cs" />
+    <Compile Include="Packets\Login\CS_ArenaUpdate.cs" />
     <Compile Include="Packets\Login\CS_Auth.cs" />
     <Compile Include="Packets\Login\CS_PlayerLogin.cs" />
     <Compile Include="Packets\Login\SC_Auth.cs" />
@@ -107,12 +109,13 @@
     <Compile Include="Packets\Social\Chats\SC_LeaveChat.cs" />
     <Compile Include="Packets\Social\Chats\CS_LeaveChat.cs" />
     <Compile Include="Packets\Social\CS_ChatCommand.cs" />
-    <Compile Include="Packets\Social\SC_ModCommand.cs" />
+    <Compile Include="Packets\Social\CS_ModCommand.cs" />
     <Compile Include="Packets\Social\Chats\SC_PrivateChat.cs" />
     <Compile Include="Packets\Social\Chats\CS_JoinChat.cs" />
     <Compile Include="Packets\Social\Chats\CS_PrivateChat.cs" />
     <Compile Include="Packets\Social\Chats\SC_JoinChat.cs" />
     <Compile Include="Packets\Social\SC_Chat.cs" />
+    <Compile Include="Packets\Commands\Chat\SC_ChartResponse.cs" />
     <Compile Include="Packets\Social\Whisper\CS_Whisper.cs" />
     <Compile Include="Packets\Player\CS_PlayerBanner.cs" />
     <Compile Include="Packets\Player\CS_PlayerLeave.cs" />
