Updated league scripts with new commands and stat saving. Updated *getball, could be used on spec players. - Fixed Fixed minor error in *wipe command, forgot inventory and skills. Fixed error with squad chats. Could talk in other squads by changing your squad chat name. Seperating mod commands from chat commands - work in progress Added tickIndex globally to fix timers, each arena sets its timer clock index so commands like *timer work correctly Adding file exporter for league stats. - work in progress Changed player permission to allow players powers for non "Public" named arenas.

--- a/InfServer/InfServer.csproj
+++ b/InfServer/InfServer.csproj
@@ -231,6 +231,7 @@
     <Compile Include="Logic\General\Assets.Item.cs" />
     <Compile Include="Logic\General\Assets.Skills.cs" />
     <Compile Include="Logic\General\Rewards.cs" />
+    <Compile Include="Logic\Helpers\FileExport.cs" />
     <Compile Include="Logic\Helpers\Permit.cs" />
     <Compile Include="Logic\Helpers\Text.cs" />
     <Compile Include="Logic\Lio\Warp.cs" />
