New usl script New skirmishLeague script New breakdown.. going to add this to all zones
-Mizz

--- a/bin/scripts/Scripts.csproj
+++ b/bin/scripts/Scripts.csproj
@@ -232,6 +232,7 @@
     <Compile Include="GameTypes\MOBA\Turrets\Tower.cs" />
     <Compile Include="GameTypes\SKCTF\Objects\Points.cs" />
     <Compile Include="GameTypes\SKCTF\SKCTF.cs" />
+    <Compile Include="GameTypes\SL\SLTDM.cs" />
     <Compile Include="GameTypes\SoccerBrawl\SoccerBrawl.cs" />
     <Compile Include="GameTypes\TDM\TDM.cs" />
     <Compile Include="GameTypes\CTF\CTF_OvD\OvD.cs" />
